
  The parameters have been completely changed. Earlier, getFileList() accepted
  2 booleans to define if files in the scopes 'binaryfile' and 'image' should
  be omitted. Now the method accepts an array of scopes of the files you want
  to be returned, and a boolean with which you can reverses the behavior so
  that all files in the scopes in the array are excluded.

Change of behaviour
-------------------

- eZContentClass - __clone

  A clone of an instance of eZContentClass will have a new remote ID, while
  before it had the same remote ID as its original.

- eZCharTransform does not any longer have a member variable $Mapper, because
  it caused wrong transformation rules to be used when calling
  eZCharTransform::transformByGroup multiple times with another value for its
  $group parameter.

- eZMail - validate

  This method now returns the value of preg_match directly, instead of using
  ereg. This means that return values of this method now is 1 for a valid
  address, and 0 for an invalid address.

- eZDBFileHandler - $metaData

  This property now defaults to null. When metadata are fetched and not found
  (file does not exist), it is set to false. When requested again, and value is
  false, no DB check will be performed until $force is set to true

- eZDBFileHandler - $useStaleCache

  This private property is used to switch execution to stale cache mode for the
  current cache file. It defaults to false.

- eZDBFileHandler - $realFilePath

  This private property is used to backup the cache file real path when
  switching to stale cache mode, since $filePath will be set to the generating
  file path.

- eZDBFileHandler - isFileExpired

  This new static method replaces isExpired. It is either called manually with
  a filepath, or by the two new methods, isLocalFileExpired and isDBFileExpired.

- eZDBFileHandler - isLocalFileExpired

  This new method checks the local file ($this->filePath) expiry status against
  a given mtime / ttl
